--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
         <caffeine.version>2.9.0</caffeine.version>
         <dropwizard-swagger.version>2.0.12-1</dropwizard-swagger.version>
         <vavr.version>0.10.3</vavr.version>
+        <mockito-core.version>2.25.1</mockito-core.version>
+        <mockito-kotlin.version>2.2.0</mockito-kotlin.version>
+        <wiremock.version>2.26.3</wiremock.version>
+        <awaitility-kotlin.version>4.0.2</awaitility-kotlin.version>
+        <assertj-core.version>3.12.0</assertj-core.version>
     </properties>
 
     <dependencyManagement>
@@ -92,6 +97,36 @@
             <groupId>io.vavr</groupId>
             <artifactId>vavr</artifactId>
             <version>${vavr.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-test-junit</artifactId>
+            <version>${kotlin.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.nhaarman.mockitokotlin2</groupId>
+            <artifactId>mockito-kotlin</artifactId>
+            <version>${mockito-kotlin.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility-kotlin</artifactId>
+            <version>${awaitility-kotlin.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock-jre8</artifactId>
+            <version>${wiremock.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj-core.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
