--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <wiremock.version>2.26.3</wiremock.version>
         <awaitility-kotlin.version>4.0.2</awaitility-kotlin.version>
         <assertj-core.version>3.12.0</assertj-core.version>
+        <jib.container.appRoot>/app</jib.container.appRoot>
     </properties>
 
     <dependencyManagement>
@@ -215,7 +216,7 @@
                     <container>
                         <args>
                             <arg>server</arg>
-                            <arg>/app/resources/config.yml</arg>
+                            <arg>${jib.container.appRoot}/resources/config.yml</arg>
                         </args>
                         <ports>
                             <port>8080</port> <!-- Service HTTP port -->
@@ -224,15 +225,19 @@
                         <jvmFlags>
                             <jvmFlag>-server</jvmFlag>
                             <jvmFlag>-XX:+ExitOnOutOfMemoryError</jvmFlag>
+                            <jvmFlag>-Dfile.encoding=UTF-8</jvmFlag>
+                            <jvmFlag>-Djava.awt.headless=true</jvmFlag>
+                            <jvmFlag>-XX:MaxRAMPercentage=75</jvmFlag>
                         </jvmFlags>
                     </container>
                 </configuration>
                 <executions>
                     <execution>
-                        <phase>package</phase>
+                        <id>dockerBuild</id>
                         <goals>
-                            <goal>build</goal>
+                            <goal>dockerBuild</goal>
                         </goals>
+                        <phase>package</phase>
                     </execution>
                 </executions>
             </plugin>
